--- a/Analisis_Ventas.ipynb
+++ b/Analisis_Ventas.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,9 +26,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El archivo fue cargado correctamente\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -105,19 +112,24 @@
        "4  2024-01-03  Producto B        10             10.0"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data = pd.read_csv('Ventas.csv', sep =',')\n",
+    "try:\n",
+    "    data = pd.read_csv('Ventas.csv', sep =',')\n",
+    "    print(\"El archivo fue cargado correctamente\")\n",
+    "except Exception as err:\n",
+    "    print(\"El archivo no fue cargado correctamente, error:\", err)\n",
+    "    \n",
     "data.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -177,10 +189,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# En caso encontremos valores nulos o celdas con un solo espacio reemplazaremos con null\n",
+    "data.replace(r'^\\s*$', pd.NA, regex=True, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# En caso se requiere hacer una imputacion. \n",
     "# Realizaremos un imputacion por la moda para datos categoricos y por la media por datos numericos en caso existan valores nulos\n",
     "for columna in data.columns:\n",
     "    if data[columna].isnull().any():\n",
@@ -203,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +320,7 @@
        "5  2024-01-03  Producto C         5              7.0   35.0"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -317,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -379,7 +402,7 @@
        "2  Producto C        140.0"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -401,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -458,7 +481,7 @@
        "1  Producto B        150.0"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -483,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -492,21 +515,29 @@
      "text": [
       "Las 5 fechas con mayor cantidad de productos vendidos son:\n",
       "\n",
-      "Index(['2024-01-02', '2024-01-01', '2024-01-03'], dtype='object', name='fecha')\n"
+      "   fechaventa  n_productos\n",
+      "1  2024-01-02           35\n",
+      "0  2024-01-01           15\n",
+      "2  2024-01-03           15\n"
      ]
     }
    ],
    "source": [
-    "# Creamos la tabla 'ventas_por_dia' y ordenamos en forma descendente en funcion a la cantidad de ventas\n",
-    "ventas_por_dia = data.groupby('fecha')['cantidad'].sum().sort_values(ascending=False)\n",
+    "# Creamos la tabla 'ventas_por_dia' para agrupar por fecha y cantidad de prodcutos.\n",
+    "ventas_por_dia = data.groupby('fecha')['cantidad'].sum().reset_index()\n",
+    "\n",
+    "# Ordenamos los días por la cantidad de productos vendidos, de mayor a menor\n",
+    "ventas_por_dia = ventas_por_dia.sort_values(by='cantidad', ascending=False)\n",
+    "\n",
+    "# nombramos las columnas\n",
+    "ventas_por_dia.columns = ['fechaventa', 'n_productos']\n",
     "\n",
     "# Extraemos las 5 fechas donde se realizo la mayor cantidad de venta\n",
     "top_5_dias = ventas_por_dia.head(5)\n",
     "\n",
-    "# mostraremos solo las fechas\n",
-    "fechas_top_5 = top_5_dias.index \n",
+    "# mostraremos la tabla\n",
     "print(\"Las 5 fechas con mayor cantidad de productos vendidos son:\\n\")\n",
-    "print(fechas_top_5)"
+    "print(top_5_dias)"
    ]
   },
   {
@@ -518,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
